--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-rsync": "0.0.8",
     "gulp-sass": "^4.0.2",
     "gulp-terser": "^1.2.0",
+    "lodash.template": "^4.5.0",
     "vinyl-ftp": "^0.6.1"
   }
 }
